10/11/25  optimization of the scheme editor class, creation of a shape manager